[package]
name = "aer"
description = "A command-line toolkit for creatives."
version = "0.1.0"
edition = "2024"
license = "FSL-1.1-MIT"
readme = "README.md"
repository = "https://github.com/caer/aer"
authors = [
    "With Caer, LLC <hi@caer.cc>",
]

[dependencies]
# Clipboard
arboard = "3.6.0"
# Data types
codas = "0.5.1"
codas-macros = "0.5.1"
# SASS-y compiler
grass = "0.13.4"
# HTML parsing and rewriting.
lol_html = "2.7.1"
# Image processing.
image = { version = "0.25.8", default-features = false, features = ["rayon", "jpeg", "png", "gif", "ico", "webp"] }
# Template processing.
logos = "0.15.1"
# Markdown processing.
markdown = "1.0.0-alpha.21"
# JavaScript bundling.
brk_rolldown = "0.2.3"
brk_rolldown_common = "0.2.3"
# Async runtime (required by brk_rolldown)
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
# HTML file minification
minify-html-onepass = "0.16.4"
# JS file minification
minify-js = "0.5.6"
# ICC color profiles
moxcms = "0.7.2"
# Colorspaces
palette = "0.7.6"
# Terminal rendering.
ratatui = "0.29.0"
# Logging.
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
# URL canonicalization
url = "2.2.2"

[dev-dependencies]
test-log = { version = "0.2.18", default-features = false, features = ["trace", "unstable"] }
