[package]
name = "aer"
description = "A command-line toolkit for creatives."
version = "0.2.0"
edition = "2024"
license = "FSL-1.1-MIT"
readme = "README.md"
repository = "https://github.com/caer/aer"
authors = [
    "With Caer, LLC <hi@caer.cc>",
]

[dependencies]
# Clipboard
arboard = "3.6.0"
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
# Data types
codas = "0.5.1"
codas-macros = "0.5.1"
# File glob patterns
glob = "0.3.2"
# SASS-y compiler
grass = "0.13.4"
# HTML parsing and rewriting.
lol_html = "2.7.1"
# Image processing.
image = { version = "0.25.8", default-features = false, features = ["rayon", "jpeg", "png", "gif", "ico", "webp"] }
# Template processing.
logos = "0.15.1"
# Markdown processing.
markdown = "1.0.0-alpha.21"
# JavaScript bundling.
brk_rolldown = "0.2.3"
brk_rolldown_common = "0.2.3"
# Async runtime (required by brk_rolldown)
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs", "process"] }
# HTML file minification
minify-html-onepass = { version = "0.18.1", default-features = false }
# JS file minification
oxc_allocator = "0.110"
oxc_codegen = "0.110"
oxc_minifier = "0.110"
oxc_parser = "0.110"
oxc_span = "0.110"
# ICC color profiles
moxcms = "0.7.2"
# Colorspaces
palette = "0.7.6"
# Terminal rendering.
ratatui = "0.29.0"
# TOML parsing
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.11"
# Logging.
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
# URL canonicalization
url = "2.5.8"
# HTTP server
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["fs", "set-header"] }
# File watching
notify-debouncer-mini = "0.7.0"

[dev-dependencies]
test-log = { version = "0.2.18", default-features = false, features = ["trace", "unstable"] }

[profile.release]
# Optimize for compiled size.
opt-level = "s"
# Strip symbols and debug info from the binary.
strip = true
# Enable link-time optimization for better inlining across crates.
lto = true
